Fix le z-index des notif de la messagerie

--- a/web/static/css/style.css
+++ b/web/static/css/style.css
@@ -380,5 +380,5 @@ hr{
     margin-top: 4em;
     margin-bottom:-100px;
     position:relative;
-    z-index:100;
+    z-index:10000;
 }
